test/conformance/chainsaw/webhook-configurations/cpol-match-conditions-pass/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-fine-grained-match-conditions-pass-ns
