test/conformance/chainsaw/webhook-configurations/cpol-match-conditions-pass/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallow-annotations-example
  namespace: cpol-fine-grained-match-conditions-pass-ns
spec:
  containers:
  - name: example
    image: busybox:latest
    args: ["sleep", "infinity"]
