test/conformance/chainsaw/webhook-configurations/cpol-match-conditions-pass/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-fine-grained-match-conditions-pass
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
