test/conformance/chainsaw/webhook-configurations/cpol-match-conditions-pass/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: double-wildcard
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-fine-grained-match-conditions-pass
  - name: step-03
    try:
    - command:
        args:
        - get
        - validatingwebhookconfigurations
        - kyverno-resource-validating-webhook-cfg
        - -o
        - yaml
        entrypoint: kubectl
  - name: step-04
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod.yaml
